--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Depends:
 Imports:
     shiny (>= 1.7.0),
     shinydashboard (>= 0.7.2),
+    leaflet.extras (>= 1.0.0),
     leaflet (>= 2.1.1),
     plotly (>= 4.10.0),
     DT (>= 0.26),
