Add comprehensive enhancements to respiratory geospatial dashboard v0.2.0
NEW FEATURES:

1. MONTE CARLO SIMULATION FOR HOTSPOT SIGNIFICANCE TESTING
   - monte_carlo_hotspot_test(): Tests significance of spatial clusters
   - Based on Roberts et al. (2006) Alameda County study methodology
   - Visualization of significance levels on the map

2. COMPOSITE OPPORTUNITY INDEX
   - calculate_opportunity_index(): Combines SES, environmental, and healthcare factors
   - Based on Beck et al. (2017) Child Opportunity Index approach
   - Visualization showing relationship between opportunity index and outcomes

3. ADDITIONAL HEALTH INDICATORS
   - medication_use: Controller vs rescue medication classification
   - quality_care_index: Composite of outpatient visits and medication adherence
   - healthcare_utilization: ED visits, hospitalizations, outpatient ratio

4. DASYMATRIC MAPPING APPROACH
   - dasymetric_mapping(): Refined spatial interpolation using population density
   - Uses land use data to weight interpolation
   - Improves upon simple IDW interpolation

5. REAL-TIME SURVEILLANCE CAPABILITIES
   - Time-series animation showing changes over time
   - Cumulative case tracking
   - Alert system for areas exceeding threshold rates

6. RISK STRATIFICATION MODEL
   - stratify_risk(): Categorizes patients into risk tiers (low/medium/high)
   - Based on composite risk score (environmental + demographic + clinical)
   - Risk tier visualization and filtering on dashboard

7. ENHANCED SPATIAL STATISTICS
   - calculate_getis_ord_gi(): Getis-Ord Gi* statistic for hotspot detection
   - spatial_scan_statistic(): Kulldorff's scan statistic for cluster detection
   - variogram_analysis(): Spatial variogram for spatial correlation structure

8. HEALTHCARE ACCESS ANALYSIS
   - calculate_travel_time(): Estimates travel time to nearest facility
   - identify_deserts(): Identifies areas with poor healthcare access
   - Healthcare access overlay on map

TECHNICAL IMPROVEMENTS:
- Comprehe

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: respiratorygeospatial
 Type: Package
 Title: Pediatric Respiratory Geospatial Health Analysis Dashboard
-Version: 0.1.0
+Version: 0.2.0
 Authors@R: c(
     person("Developer", "Name", email = "dev@example.com", role = c("aut", "cre"))
 )
 Description: A comprehensive R Shiny dashboard for analyzing pediatric respiratory 
     health data with geospatial components. Includes tools for spatial analysis,
-    risk modeling, and interactive visualization of lung function trajectories.
+    risk modeling, Monte Carlo significance testing, risk stratification, healthcare
+    access analysis, and interactive visualization of lung function trajectories.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
