--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -38,13 +38,22 @@ jobs:
       - name: Query dependencies
         run: |
           install.packages('remotes')
-          if (!dir.exists(".github")) dir.create(".github")
-          saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
+          dir.create(".github", showWarnings = FALSE, recursive = TRUE)
+          deps <- remotes::dev_package_deps(dependencies = TRUE)
+          saveRDS(deps, ".github/depends.Rds", version = 2)
           writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
         shell: Rscript {0}
       
       - name: Restore R package cache
         if: runner.os != 'Windows'
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.R_LIBS_USER }}
+          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
+          restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-
+          
+      - name: Restore R package cache (Windows)
+        if: runner.os == 'Windows'
         uses: actions/cache@v4
         with:
           path: ${{ env.R_LIBS_USER }}
